--- a/templates/linechart.html
+++ b/templates/linechart.html
@@ -6,6 +6,15 @@
 <link rel="stylesheet" type="text/css" href="../static/css/flat-ui.min.css">
 </head>
 <body style="background-image: url(../static/images/pattern.png), url(../static/images/background.jpg);">
+  <header style='padding-left: 0px;
+                 padding-right: 0px;
+                 padding-bottom: 0px;
+                 padding-top: 0px;'>
+    <nav class='navbar navbar-inverse navbar-embossed' role='navigation' style='margin-bottom:0px;'>
+    <div class='navbar-header'>
+      <a class='navbar-brand' style="padding-left: 45px;" href='/'>日志分析</a>
+    </div>
+  </header>
   <canvas id="canvas"></canvas>
   <form action="" method="POST">
     <div class="input-group" style="text-align:center">
