--- a/templates/linechart.html
+++ b/templates/linechart.html
@@ -5,13 +5,13 @@
 <script src="../static/js/flat-ui.min.js"></script>
 <link rel="stylesheet" type="text/css" href="../static/css/flat-ui.min.css">
 </head>
-<body style="background-image: url(../static/images/pattern.png), url(../static/images/background.jpg);">
+<body style="margin-top: 0px;margin-left: 0px;margin-right: 0px;">
   <header style='padding-left: 0px;
                  padding-right: 0px;
                  padding-bottom: 0px;
                  padding-top: 0px;'>
     <nav class='navbar navbar-inverse navbar-embossed' role='navigation' style='margin-bottom:0px;'>
-    <div class='navbar-header'>
+      <div class='navbar-header' style="margin-top: 13px;">
       <a class='navbar-brand' style="padding-left: 45px;" href='/'>日志分析</a>
     </div>
   </header>
