--- a/templates/linechart.html
+++ b/templates/linechart.html
@@ -1,28 +1,16 @@
-<html>
-<head>
-<script src="../static/js/Chart.js"></script>
-<script src="../static/js/jQuery.min.js"></script>   
-<script src="../static/js/flat-ui.min.js"></script>
-<link rel="stylesheet" type="text/css" href="../static/css/flat-ui.min.css">
-</head>
-<body style="margin-top: 0px;margin-left: 0px;margin-right: 0px;">
-  <header style='padding-left: 0px;
-                 padding-right: 0px;
-                 padding-bottom: 0px;
-                 padding-top: 0px;'>
-    <nav class='navbar navbar-inverse navbar-embossed' role='navigation' style='margin-bottom:0px;'>
-      <div class='navbar-header' style="margin-top: 13px;">
-      <a class='navbar-brand' style="padding-left: 45px;" href='/'>日志分析</a>
-    </div>
-  </header>
-  <canvas id="canvas"></canvas>
-  <form action="" method="POST">
-    <div class="input-group" style="text-align:center">
-      <span class="input-group-addon">输入</span>
-      <input type="text" name='dates' class="form-control" placeholder="格式：name-entrypoint-date  如：odan-web-macvlan-2015-08-22" id='1' style='width: 480px;'/>
-    <button id='count' type="button" class='btn btn-primary'>开始绘图</button>
-    </div>
-  </form>
+{% extends './base.html' %}
+{% block title %}日志分析绘图{% endblock %}
+{% block head %}
+{% endblock %}
+{% block body %}
+<canvas id="canvas"></canvas>
+<form action="" method="POST">
+  <div class="input-group" style="text-align:center">
+    <span class="input-group-addon">输入</span>
+    <input type="text" name='dates' class="form-control" placeholder="格式：name-entrypoint-date  如：odan-web-macvlan-2015-08-22" id='1' style='width: 480px;padding-bottom: 0px;padding-top: 0px;padding-left: 20px;padding-right: 0px;'/>
+  <button id='count' type="button" class='btn btn-primary'>开始绘图</button>
+  </div>
+</form>
 <script>
 $('#count').click(function(){
     var date_value = $("#1").val();
@@ -56,11 +44,11 @@ $('#count').click(function(){
         datasets : [
             {
                 label: "QPS",
-                fillColor : "rgba(127,255,212,0.2)",
-                strokeColor : "rgba(0,100,0,1)",
-                pointColor : "rgba(0,100,0,1)",
-                pointStrokeColor : "#bbb",
-                pointHighlightFill : "#bbb",
+                fillColor : "rgba(0,245,255,0.2)",
+                strokeColor : "rgba(0,245,255,1)",
+                pointColor : "rgba(0,245,255,1)",
+                pointStrokeColor : "#00FFFB",
+                pointHighlightFill : "#00FFFB",
                 pointHighlightStroke : "rgba(0,0,0,1)",
                 data : b
             },
@@ -73,5 +61,4 @@ $('#count').click(function(){
 });
 </script>
 </body>
-</html>
-
+{% endblock %}
