--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <script src='/static/js/Chart.js'></script>
 {% block head %}{% endblock %}
 </head>
-<body style="margin-top: 0px;margin-left: 0px;margin-right: 0px; background-image: url(../static/images/pattern.png), url(../static/images/world.jpg);">
+<body style="margin-top: 0px;margin-left: 0px;margin-right: 0px;background-size:cover; background-image: url(../static/images/pattern.png), url(../static/images/world.jpg);">
     <header>
         <nav class='navbar navbar-inverse navbar-embossed' role='navigation' style='margin-bottom:0px;background-color:black'>
             <div class='navbar-header' style="margin-top: 14px;">
