--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
 <title>{% block title %}{% endblock %}</title>
 <link rel='stylesheet' type='text/css' href='/static/css/flat-ui.min.css'>
-<script src='/static/js/jQuery.min.js'></script>
+<script src='/static/js/jquery.min.js'></script>
 <script src='/static/js/flat-ui.min.js'></script>
 <script src='/static/js/Chart.js'></script>
 {% block head %}{% endblock %}
